27 January 2009
+ updated threesec templates to conform with norm box-title,
  box-content layout
+ Added ability to lengthen or shorten pagesmith links.
+ Updated: templates/page_templates/threesec/page.tpl,
  templates/page_templates/threesec-tbl/page.tpl,
  templates/settings.tpl

16 January 2009
+ Added fix so edit mode does not parse smarttags.

Version 1.3.0
--------------------------------------------------------------------
7 January 2009
+ Fixed: Pages and their headers not updating correctly.

5 January 2009
+ Changed text submission method. Using a session that was already in
  use to post instead of relying on javascript.

18 November 2008
+ Changed ps_text.content column to longtext in mysql.

1 October 2008
+ Miniadmin title setting used (dependency)
+ Switched some javascript out to jquery
+ Updated: javascript/passinfo/head.js

30 September 2008
+ Added button to save changes and continue.
+ Updated: templates/page_form.tpl

17 September 2008
+ Caching page list

11 September 2008
+ Changed page links to page numbering.

10 September 2008
+ Changed admin links to icons to save room.
+ Deleting a child page reorders the remainder
+ Added permissions to the link in the admin menu.
+ Changed the created update date formats to something more compact


8 September 2008
+ Added ability to add pages to parent page.
+ Added ability to change page template.
+ Blank content will load Lorum upsum text instead of just
  non-breaking space.
+ Can delete uploaded templates now.
+ Added a "back to top" anchor.
+ Error message added for bad id on edit.
+ Checking character length after parseInput now.
+ Lorum text has hidden comment to help with parsing it out.
+ Comments added to update javascript
+ Added threesec-tbl for a more concrete layout structure.
+ Updated: javascript/delete_orphan/
  templates/page_templates/threesec-tbl/
  templates/orphans.tpl
  templates/page_form.tpl
  templates/page_frame.tpl
  templates/page_list.tpl
  templates/style.css