@@ -1,3 +1,6 @@
+30 January 2009
++ Page cache refreshed on page save.
+
 27 January 2009
 + updated threesec templates to conform with norm box-title,
   box-content layout
